Angular Service Worker

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,16 @@ $seventv-app-theme: mat-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+	overflow-x: hidden;
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; min-height: 100%; }
+
+mat-icon {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
