--- a/src/app/emotes/emotes.component.html
+++ b/src/app/emotes/emotes.component.html
@@ -5,7 +5,7 @@
 
 		<!-- Buttons -->
 		<div class="col-6">
-			<div class="d-flex justify-content-end">
+			<div class="d-flex justify-content-end" *ngIf="clientService.hasPermission('CREATE_EMOTE') | async">
 				<button mat-raised-button [disabled]="!(clientService.isAuthenticated() | async)" [routerLink]="['/emotes', 'create']">
 					<mat-icon>add</mat-icon>
 					ADD EMOTE
