--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -34,7 +34,7 @@
 			<ng-template matMenuContent>
 				<button mat-menu-item
 				*ngFor="let opt of contextMenuOptions"
-				[class.d-none]="(!!opt.condition && !!contextEmote) && !(opt.condition(contextEmote) | async)"
+				[class.d-none]="(!!opt.condition && !!contextEmote) && (opt.condition(contextEmote) | async) === (false)"
 				(click)="(!!contextEmote && opt.click) ? onContextInteract(opt, contextEmote) : undefined"
 				>
 					<mat-icon [appColor]="opt.color"> {{opt.icon}} </mat-icon>
