--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,45 +1,31 @@
-.container {
-    margin: 4% auto;
-    padding: 1%;
+.user {
     display: flex;
-    justify-content: space-between;
-    width: 30%;
-    background-color: #393939;
-}
-
-.ava-container {
-    width: 50%;
-    align-self: flex-end;
-    background-color: #2b2b2b;
-    margin: 3%;
-
-}
-
-.info-container {
     flex-direction: column;
-    justify-content: space-between;
-    background-color: #2b2b2b;
-    margin: 3%;
-    width: 70%;
-    padding: 2%;
-    * {
-        margin: 3%;
-    }
-    .user-container {
-        display: inline-flex;
-        align-items: center;
-        *{
-            margin: 0;
-        }
-        mat-icon {
-            margin-right: 0.3rem;
-        }
-    }
-    
-    
-}
 
-.avatar {
-    width: 100%;
-}
+    .heading {
+        z-index: 1;
+        padding: 1em;
+    }
 
+    .content {
+        display: block;
+        padding: 2.5%;
+
+        .ctx-block {
+            margin: 1em;
+
+            .ctx-heading {
+                z-index: 1;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+                padding: .33em;
+            }
+    
+            .ctx-content {
+                border-bottom-left-radius: 4px;
+                border-bottom-right-radius: 4px;
+                z-index: 1;
+            }
+        }
+    }
+}
