--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,22 @@
+<div class="about">
+    <!-- Heading -->
+    <div class="heading mat-elevation-z3" [appColor]="themingService.bg.darken(.2)" [isBackground]="true">
+        <mat-icon>info</mat-icon>
+        <span class="ml-1">About</span>
 
-<div class="centered">
+    </div>
 
-<p>7tv doesn't practice cancel culture for emotes. We have Zulul, PogChamp and many more!</p> 
-<p>You can upload your emotes and add them to your channel. As long as it is TOS friendly</p>
 
-<a href="https://github.com/SevenTV">Help contribute on GitHub!</a>
+    <!-- Content -->
+    <div class="content flex-fill">
+        <p>7TV is an open-source, free third party emote extension for Twitch</p>
+        <p></p>
+    
+        <a href="https://github.com/SevenTV" target="_blank">Help contribute on GitHub!</a>
+    
+        <p>
+            <code>It's a third party thing LULW</code>
+        </p>
+    </div>
 
-<p>
-    <code>It's a third party thing LULW</code>
-</p>
 </div>
