--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,31 +1,109 @@
+
 .user {
+    display: flex;
+    flex-direction: row;
+}
+
+.heading {
     display: flex;
     flex-direction: column;
 
-    .heading {
-        z-index: 1;
-        padding: 1em;
+    .user-block {
+        display: flex;
+        flex-direction: column;
+        width: 250px;
+        min-height: 160px;
+        border-radius: 4px;
+
+        .user-who {
+            height: 100%;
+            width: 100%;
+            display: flex;
+
+            .user-who-avatar {
+                height: min-content;
+                z-index: 1;
+                padding: 1em;
+                border-bottom-right-radius: 2em;
+            }
+
+            .user-who-text {
+                width: 100%;
+
+                .user-who-displayname {
+                    display: flex;
+                    align-items: center;
+                    :first-child {
+                        margin-left: 1em;
+                    }
+    
+                    height: 2.5em;
+                    width: 100%;
+                }
+
+                .user-role {
+                    display: flex;
+                    justify-content: flex-end;
+                    margin-top: .75em;
+                    padding-right: 1em;
+                    width: 100%;
+                    height: 2em;
+
+                    padding-bottom: 1em;
+                    border-top-left-radius: 8px;
+                    border-top-right-radius: 8px;
+                }
+            }
+        }
+
+        .social-links {
+            display: flex;
+            flex-grow: 1;
+            padding: .25em;
+            align-self: flex-end;
+            align-items: flex-end;
+        }
     }
 
-    .content {
-        display: block;
-        padding: 2.5%;
+    .user-info {
+        display: flex;
+        height: 100%;
 
-        .ctx-block {
-            margin: 1em;
+        margin-top: 1em;
+        margin-right: 1em;
+        margin-left: 1em;
+        border-top-left-radius: 1em;
+        border-top-right-radius: 1em;
+        
+        .channel-editor {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: row;
+        }
+    }
+}
 
-            .ctx-heading {
-                z-index: 1;
-                border-top-left-radius: 4px;
-                border-top-right-radius: 4px;
-                padding: .33em;
-            }
-    
-            .ctx-content {
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
-                z-index: 1;
-            }
+.content {
+    display: flex;
+    padding: 2.5%;
+    margin: 1em;
+
+    .ctx-block {
+        margin: 1em;
+
+        .ctx-heading {
+            z-index: 1;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            padding: .33em;
+        }
+
+        .ctx-content {
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            z-index: 1;
         }
     }
 }
