--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -51,10 +51,38 @@
 		</div>
 	</div>
 
-	<div class="align-items-center flex-grow-0 d-none d-md-inline-flex">
-		<div [ngSwitch]="clientService.isAuthenticated() | async">
-			<app-twitch-button *ngSwitchCase="false"></app-twitch-button>
-			<app-user-name [user]="clientService" [size]="[2, .75]" *ngSwitchCase="true" [showUsername]="viewportService.isLargerThan('md') | async"></app-user-name>	
+	<div class="align-items-center flex-grow-0 d-none d-md-inline-flex h-100">
+		<div class="d-flex mr-2" *ngIf="isAnEditor() | async" [ngSwitch]="!!clientService.impersonating">
+			<button mat-icon-button matTooltip="Swap Editor Channel" (click)="impersonate()" *ngSwitchCase="false">
+				<mat-icon>swap_vert</mat-icon>
+			</button>
+
+			<button mat-icon-button matTooltip="Quit Impersonating" *ngSwitchCase="true" (click)="clientService.impersonating = null">
+				<mat-icon>logout</mat-icon>
+			</button>
+		</div>
+
+		<div class="h-100" [ngSwitch]="clientService.isAuthenticated() | async">
+			<span *ngSwitchCase="false">
+				<app-twitch-button *ngSwitchCase="false"></app-twitch-button>
+			</span>
+
+			<span class="h-100" *ngSwitchCase="true"  [ngSwitch]="!!clientService.impersonating">
+				<span class="user-as-editor" *ngSwitchCase="true">
+					<app-user-name [user]="clientService" [size]="[1.65, .585]" [showUsername]="viewportService.isLargerThan('md') | async"></app-user-name>	
+
+					<span class="edited-user">
+						<mat-icon>
+							keyboard_return
+						</mat-icon>
+						<app-user-name [user]="clientService.impersonating" [showAvatar]="true" [size]="[1, .48]"></app-user-name>
+					</span>
+				</span>
+
+				<span class="h-100 user-as-self">
+					<app-user-name [user]="clientService" [size]="[2, .75]" *ngSwitchCase="false" [showUsername]="viewportService.isLargerThan('md') | async"></app-user-name>	
+				</span>
+			</span>
 		</div>
 	</div>
 
