--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -2,6 +2,7 @@
 .user {
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .heading {
@@ -86,7 +87,8 @@
 }
 
 .content {
-    display: flex;
+    display: block;
+    overflow-y: auto;
     padding: 2.5%;
     margin: 1em;
 
