--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -36,13 +36,12 @@
             <!-- Channel Editors -->
             <div class="channel-editors">
                 <p>Channel Editors</p>
-                <div class="channel-editor mt-1" *ngFor="let usr of getEditors() | async">
+                <div class="channel-editor mt-1" *ngFor="let usr of editors | async">
                     <app-user-name [user]="usr"></app-user-name>
                     <button mat-icon-button (click)="removeEditor(usr)" *ngIf="canEdit() | async" matTooltip="Remove Editor">
                         <mat-icon>close</mat-icon>
                     </button>
                 </div>
-
                 <!-- Add Editor Button -->
                 <div [ngSwitch]="addingEditor" *ngIf="canEdit() | async">
                     <div *ngSwitchCase="false" class="add-editor-button mt-2 p-1">
@@ -56,6 +55,13 @@
                             <mat-hint>Enter their username</mat-hint>
                         </mat-form-field>
                     </div>
+                </div>
+
+                <div class="mt-3"></div>
+
+                <p *ngIf="clientService.isAnEditor() | async">Editor Of</p>
+                <div class="channel-editor mt-1" *ngFor="let usr of edited | async">
+                    <app-user-name [user]="usr"></app-user-name>
                 </div>
             </div>
         </div>
